// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Services renders loading indicator when services are loading 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
      }
    }
    keyboardShouldPersistTaps="handled"
    stickyHeaderIndices={
      [
        0,
      ]
    }
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#F2F2F2",
            "padding": 24,
            "paddingBottom": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#D3D3D3",
              "borderColor": "#D3D3D3",
              "borderRadius": 4,
              "borderWidth": 1,
              "color": undefined,
              "flexDirection": "row",
              "fontFamily": "BCSans-Regular",
              "fontSize": undefined,
              "padding": 10,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#313132",
                  "fontSize": 24,
                },
                undefined,
                {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <TextInput
            accessibilityLabel="BCSC.Services.CatalogueSearch"
            autoCorrect={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="BCSC.Services.CatalogueSearch"
            placeholderTextColor="#606060"
            style={
              {
                "color": "#313132",
                "flex": 1,
                "fontSize": 20,
                "marginLeft": 8,
              }
            }
            testID="com.ariesbifold:id/search"
            value=""
          />
        </View>
      </View>
      <ActivityIndicator
        size="large"
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
        testID="com.ariesbifold:id/ServicesLoading"
      />
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`Services renders service list when loading is complete 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
      }
    }
    keyboardShouldPersistTaps="handled"
    stickyHeaderIndices={
      [
        0,
      ]
    }
  >
    <View>
      <View
        style={
          {
            "backgroundColor": "#F2F2F2",
            "padding": 24,
            "paddingBottom": 16,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#D3D3D3",
              "borderColor": "#D3D3D3",
              "borderRadius": 4,
              "borderWidth": 1,
              "color": undefined,
              "flexDirection": "row",
              "fontFamily": "BCSans-Regular",
              "fontSize": undefined,
              "padding": 10,
            }
          }
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#313132",
                  "fontSize": 24,
                },
                undefined,
                {
                  "fontFamily": "Material Icons",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
          <TextInput
            accessibilityLabel="BCSC.Services.CatalogueSearch"
            autoCorrect={false}
            onBlur={[Function]}
            onChangeText={[Function]}
            onFocus={[Function]}
            placeholder="BCSC.Services.CatalogueSearch"
            placeholderTextColor="#606060"
            style={
              {
                "color": "#313132",
                "flex": 1,
                "fontSize": 20,
                "marginLeft": 8,
              }
            }
            testID="com.ariesbifold:id/search"
            value=""
          />
        </View>
      </View>
      <View>
        <View
          style={
            {
              "gap": 2,
              "paddingHorizontal": 24,
            }
          }
        >
          <View
            style={
              {
                "flexDirection": "column",
                "gap": 8,
              }
            }
          >
            <View
              accessibilityLabel="Test Service"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "backgroundColor": "#003366",
                    "padding": 16,
                  },
                  {
                    "borderRadius": 8,
                  },
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 8,
                  }
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "gap": 8,
                        "justifyContent": "space-between",
                      }
                    }
                  >
                    <Text
                      maxFontSizeMultiplier={2}
                      style={
                        [
                          {
                            "color": "#313132",
                            "fontFamily": "BCSans-Regular",
                            "fontSize": 18,
                            "fontWeight": "bold",
                          },
                          {
                            "color": "#003366",
                            "flex": 1,
                          },
                        ]
                      }
                      testID="com.ariesbifold:id/ServiceButton-TestService"
                    >
                      Test Service
                    </Text>
                    <View
                      accessibilityLabel="Toggle bookmark for Test Service"
                      accessibilityRole="button"
                      accessibilityState={
                        {
                          "busy": undefined,
                          "checked": undefined,
                          "disabled": undefined,
                          "expanded": undefined,
                          "selected": undefined,
                        }
                      }
                      accessibilityValue={
                        {
                          "max": undefined,
                          "min": undefined,
                          "now": undefined,
                          "text": undefined,
                        }
                      }
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      hitSlop={
                        {
                          "bottom": 44,
                          "left": 44,
                          "right": 44,
                          "top": 44,
                        }
                      }
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      testID="com.ariesbifold:id/ServiceButton-Bookmark-TestService"
                    >
                      <Text
                        allowFontScaling={false}
                        selectable={false}
                        style={
                          [
                            {
                              "color": "#003366",
                              "fontSize": 24,
                            },
                            undefined,
                            {
                              "fontFamily": "Material Design Icons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            {},
                          ]
                        }
                      >
                        󰃃
                      </Text>
                    </View>
                  </View>
                  <Text
                    maxFontSizeMultiplier={2}
                    style={
                      [
                        {
                          "color": "#313132",
                          "fontFamily": "BCSans-Regular",
                          "fontSize": 14,
                          "fontWeight": "normal",
                        },
                        {
                          "marginTop": 8,
                        },
                      ]
                    }
                  >
                    A test service
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "margin": 24,
            }
          }
        >
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "bold",
                },
                undefined,
              ]
            }
          >
            BCSC.Services.NotListed
          </Text>
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }
          >
            BCSC.Services.NotListedDescription
          </Text>
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                {
                  "marginTop": 32,
                },
              ]
            }
          >
            BCSC.Services.NotListedDescriptionContact
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;
